Fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@
     padding: 24px;
     max-width: 960px;
     margin: auto;
+    box-sizing: border-box;
 }
 
 body {
@@ -119,16 +120,24 @@ p {
     display: flex;
 }
 
+.descriptions :nth-child(3) {
+    margin-right: 0px;
+}
+
 .what-i-do {
+    max-width: 309px;
     width: 100%;
     margin-right: 16px;
 }
+
+
 
 .what-i-do img{
     margin-bottom: 8px;
 }
 
 .what-i-do h1 {
+    width: 100%;
     margin-bottom: 4px;
     margin: 0px;
 }
@@ -141,7 +150,7 @@ p {
 .navbar {
     overflow: hidden;
     width: 100%;
-    height: 80px;
+    height: 104px;
     top: 0px;
     padding-bottom: 0px;
     background-color: #ffffff;
@@ -301,7 +310,7 @@ p {
     .navbar {
         overflow: hidden;
         width: 100%;
-        height: 64px;
+        height: 88px;
         top: 0px;
         padding-bottom: 0px;
     }
